--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.2",
-    "next": "14.1.0",
+    "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
